--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dwq8jr6pz/image/upload/v1732683639/file_1_huyubd.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QAM Modulation</title>
   </head>
